NetBSD Problem Report #44513

From www@NetBSD.org  Fri Feb  4 12:10:19 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 05CB563B874
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  4 Feb 2011 12:10:19 +0000 (UTC)
Message-Id: <20110204121018.412C463B873@www.NetBSD.org>
Date: Fri,  4 Feb 2011 12:10:18 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Typo in fwdv.c .
X-Send-Pr-Version: www-1.0

>Number:         44513
>Category:       bin
>Synopsis:       Typo in fwdv.c .
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 04 12:15:00 +0000 2011
>Closed-Date:    Mon Feb 07 01:41:02 +0000 2011
>Last-Modified:  Mon Feb 07 01:41:02 +0000 2011
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Typo in fwdv.c .
 __fnc__ -> __func__
>How-To-Repeat:

>Fix:
diff -u -r1.6 fwdv.c
--- usr.sbin/fwctl/fwdv.c	4 Jan 2011 20:45:13 -0000	1.6
+++ usr.sbin/fwctl/fwdv.c	4 Feb 2011 11:57:29 -0000
@@ -149,7 +149,7 @@
 						continue;
 				} else
 					err(EXIT_FAILURE, "%s: read failed",
-					    __fnc__);
+					    __func__);
 			}
 			tlen += len;
 			if ((RBUFSIZE - tlen) < PSIZE)

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44513 CVS commit: src/usr.sbin/fwctl
Date: Mon, 7 Feb 2011 01:37:12 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon Feb  7 01:37:12 UTC 2011

 Modified Files:
 	src/usr.sbin/fwctl: fwdv.c

 Log Message:
 Fix typo, from Henning Petersen in PR 44513.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/usr.sbin/fwctl/fwdv.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 07 Feb 2011 01:41:02 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.