Fix typo, from Henning Petersen in PR 44513.